# nix-search

./: Cargo.toml  PLAN.md  nix-search.example.toml  nixsearch.example.toml
.github/workflows/: container.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  server.rs  tests.rs
crates/core/src/: document.rs  lib.rs
crates/index-test-support/: Cargo.toml
crates/index-test-support/src/: lib.rs
crates/index/src/: lib.rs  manifest.rs  query.rs  ranking.rs  schema.rs  search.rs  store.rs  tokenize.rs  writer.rs
crates/index/tests/: search_behavior.rs
crates/ingest/src/: lib.rs
crates/ops/src/: generate.rs  lock.rs  produce.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/web/: Cargo.toml  style.css
crates/web/src/: handlers.rs  lib.rs  maintenance.rs  render_docs.rs  request.rs  scripts.rs  urls.rs
crates/web/src/scripts/: dialog-reconcile.js  navigation.js
crates/web/src/templates/: detail.rs  footer.rs  home.rs  layout.rs  mod.rs  modal.rs  results.rs  search.rs  source_tag.rs
fixtures/: options-small.json
fixtures/eval-modules-flake/: flake.nix  module.nix
nix/: cargo.nix  container.nix
