[package]
name = "nix-search-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
figment.workspace = true
serde.workspace = true
thiserror.workspace = true

nix-search-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
