[package]
name = "nix-search-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
hex.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

nix-search-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
